# mort

./: .clang-tidy  CMakeLists.txt  rebuild.bat  rebuild.sh  runtests.sh
src/: core.h  matrix3.h  quaternion.hpp  rotator2.hpp  vec.hpp  vec2.hpp  vec3.hpp
tests/: CMakeLists.txt  coretest.cpp  matrix3test.cpp  quaternionTest.cpp  rotator2test.cpp  test.cpp  vec2test.cpp  vec3test.cpp
